email auth working
*had to change sender password to generated password for the app in google account

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,3 @@
-SENDER_EMAIL="your-email@gmail.com"
-SENDER_PASSWORD="your-app-password"
+SENDER_EMAIL="maxmacshire@gmail.com"
+#password generate for this specific app in google account, neccessary to send email due to smtp security
+SENDER_PASSWORD="xfoh ihgi kchw vhlm"
